add_executable(algorithm_reduce
    algorithm_reduce.cpp
)

add_executable(algorithm_accumulate
    algorithm_accumulate.cpp
)

add_executable(algorithm_remove_if
    algorithm_remove_if.cpp
)

add_executable(algorithm_partition
    algorithm_partition.cpp
)

add_executable(parallel_algorithm
    parallel_algorithm.cpp
)

add_executable(remove_copy
    remove_copy.cpp
)

add_executable(is_sorted_until
    is_sorted_until.cpp
)

add_executable(spaceship_operator
    spaceship_operator.cpp
)

add_executable(lexicographical_compare
    lexicographical_compare.cpp
)