add_executable(algorithm_reduce
    algorithm_reduce.cpp
)

add_executable(algorithm_accumulate
    algorithm_accumulate.cpp
)

add_executable(algorithm_remove_if
    algorithm_remove_if.cpp
)

add_executable(algorithm_partition
    algorithm_partition.cpp
)

add_executable(parallel_algorithm
    parallel_algorithm.cpp
)

add_executable(remove_copy
    remove_copy.cpp
)

add_executable(is_sorted_until
    is_sorted_until.cpp
)

add_executable(spaceship_operator
    spaceship_operator.cpp
)

add_executable(lexicographical_compare
    lexicographical_compare.cpp
)

add_executable(range_views_filter
    range_views_filter.cpp
)

add_executable(range_sort
    range_sort.cpp
)

add_executable(range_swap
    range_swap.cpp
)

add_executable(range_iter_swap
    range_iter_swap.cpp
)

add_executable(swap_ranges
    swap_ranges.cpp
)

add_executable(stable_sort
    stable_sort.cpp
)

add_executable(partial_sort
    partial_sort.cpp
)

add_executable(partial_sort_copy
    partial_sort_copy.cpp
)

add_executable(string_find_last_of
    string_find_last_of.cpp
)

add_executable(quoted
    quoted.cpp
)

add_executable(string_trimming
    string_trimming.cpp
)

add_executable(partition
    partition.cpp
)