add_executable(algorithm_reduce
    algorithm_reduce.cpp
)

add_executable(algorithm_accumulate
    algorithm_accumulate.cpp
)

add_executable(algorithm_remove_if
    algorithm_remove_if.cpp
)

add_executable(algorithm_partition
    algorithm_partition.cpp
)

add_executable(parallel_algorithm
    parallel_algorithm.cpp
)

add_executable(remove_copy
    remove_copy.cpp
)

add_executable(is_sorted_until
    is_sorted_until.cpp
)

add_executable(spaceship_operator
    spaceship_operator.cpp
)

add_executable(lexicographical_compare
    lexicographical_compare.cpp
)

add_executable(range_views_filter
    range_views_filter.cpp
)

add_executable(range_sort
    range_sort.cpp
)

add_executable(range_swap
    range_swap.cpp
)

add_executable(range_iter_swap
    range_iter_swap.cpp
)

add_executable(swap_ranges
    swap_ranges.cpp
)

add_executable(stable_sort
    stable_sort.cpp
)

add_executable(partial_sort
    partial_sort.cpp
)

add_executable(partial_sort_copy
    partial_sort_copy.cpp
)

add_executable(string_find_last_of
    string_find_last_of.cpp
)

add_executable(quoted
    quoted.cpp
)

add_executable(string_trimming
    string_trimming.cpp
)

add_executable(partition
    partition.cpp
)

add_executable(is_partitioned
    is_partitioned.cpp
)

add_executable(partition_copy
    partition_copy.cpp
)

add_executable(nth_element
    nth_element.cpp
)

add_executable(lower_upper_bound
    lower_upper_bound.cpp
)

add_executable(equal_range
    equal_range.cpp
)

add_executable(partition_point
    partition_point.cpp
)

add_executable(includes
    includes.cpp
)

add_executable(merge
    merge.cpp
)

add_executable(unique
    unique.cpp
)

add_executable(set_difference
    set_difference.cpp
)

add_executable(set_symmetric_difference
    set_symmetric_difference.cpp
)

add_executable(set_union
    set_union.cpp
)

add_executable(set_intersection
    set_intersection.cpp
)

add_executable(shift
    shift.cpp
)

add_executable(shuffle
    shuffle.cpp
)

add_executable(inner_product
    inner_product.cpp
)

add_executable(partial_sum
    partial_sum.cpp
)

add_executable(generate
    generate.cpp
)

add_executable(generate_n
    generate_n.cpp
)

add_executable(copy_backward
    copy_backward.cpp
)

add_executable(copy_n
    copy_n.cpp
)

add_executable(copy_if
    copy_if.cpp
)

add_executable(sample
    sample.cpp
)

add_executable(replace_copy
    replace_copy.cpp
)

add_executable(reverse_copy
    reverse_copy.cpp
)

add_executable(rotate_copy
    rotate_copy.cpp
)

add_executable(construct_at
    construct_at.cpp
)

add_executable(uninitialized_default_construct
    uninitialized_default_construct.cpp
)

add_executable(uninitialized_copy
    uninitialized_copy.cpp
)

add_executable(heap
    heap.cpp
)

add_executable(adjacent_find
    adjacent_find.cpp
)

add_executable(search_n
    search_n.cpp
)

add_executable(search
    search.cpp
)

add_executable(initializer_list
    initializer_list.cpp
)

add_executable(min_max_algorithm
    min_max_algorithm.cpp
)

add_executable(clamp
    clamp.cpp
)

add_executable(min_max_element
    min_max_element.cpp
)