add_executable(ccwcpp_memory_model_spinlock
    ccwcpp_memory_model_spinlock.cpp
)

add_executable(ccwcpp_memory_model_mutex
    ccwcpp_memory_model_mutex.cpp
)

add_executable(ccwcpp_memory_model_cond_var
    ccwcpp_memory_model_cond_var.cpp
)

add_executable(ccwcpp_atomic_condition
    ccwcpp_atomic_condition.cpp
)

add_executable(ccwcpp_atomic_reference
    ccwcpp_atomic_reference.cpp
)

add_executable(ccwcpp_spinlock_acquire_release
    ccwcpp_spinlock_acquire_release.cpp
)

add_executable(ccwcpp_transitivity
    ccwcpp_transitivity.cpp
)