add_executable(constructors
    constructors.cpp
)

add_executable(data_packet
    data_packet.cpp
)

add_executable(trivial_class
    trivial_class.cpp
)

add_executable(delegating_constructor
    delegating_constructor.cpp
)

add_executable(inheriting_constructor
    inheriting_constructor.cpp
)

add_executable(partially_created_object
    partially_created_object.cpp
)

add_executable(print_type_info
    print_type_info.cpp
)

add_executable(simple_type
    simple_type.cpp
)

add_executable(nsdmi_experiment
    nsdmi_experiment.cpp
)

add_executable(nsdmi_containers_data_members
    nsdmi_containers_data_members.cpp
)

add_executable(package
    package.cpp
)