add_executable(lambda_capture_global_var
    lambda_capture_global_var.cpp
)

add_executable(lambda_fold_expression
    lambda_fold_expression.cpp
)

add_executable(lambda_iife_invoke
    lambda_iife_invoke.cpp
)

add_executable(lambda_with_async
    lambda_with_async.cpp
)

add_executable(lambda_with_thread
    lambda_with_thread.cpp
)