add_executable(is_floating_point
    is_floating_point.cpp
)

add_executable(static_value
    static_value.cpp
)

add_executable(explicit_specialization_1
    explicit_specialization_1.cpp
)

add_executable(variable_templates
    variable_templates.cpp
)

add_executable(alias_templates
    alias_templates.cpp
)

add_executable(parameter_packs
    parameter_packs.cpp
)

add_executable(parameter_packs_in_contexts
    parameter_packs_in_contexts.cpp
)

add_executable(tuple_by_template
    tuple_by_template.cpp
)

add_executable(fold_expression
    fold_expression.cpp
)