add_executable(is_floating_point
    is_floating_point.cpp
)

add_executable(static_value
    static_value.cpp
)

add_executable(explicit_specialization_1
    explicit_specialization_1.cpp
)

add_executable(variable_templates
    variable_templates.cpp
)

add_executable(alias_templates
    alias_templates.cpp
)

add_executable(parameter_packs
    parameter_packs.cpp
)

add_executable(parameter_packs_in_contexts
    parameter_packs_in_contexts.cpp
)

add_executable(tuple_by_template
    tuple_by_template.cpp
)

add_executable(fold_expression
    fold_expression.cpp
)

add_executable(variadic_alias_templates
    variadic_alias_templates.cpp
)

add_executable(variadic_variable_templates
    variadic_variable_templates.cpp
)

add_executable(non_dependent_name_lookup
    non_dependent_name_lookup.cpp
)

add_executable(dependent_name_lookup
    dependent_name_lookup.cpp
)

add_executable(two_phase_name_lookup
    two_phase_name_lookup.cpp
)

add_executable(dependent_type_names
    dependent_type_names.cpp
)

add_executable(dependent_template_names
    dependent_template_names.cpp
)

add_executable(current_instantiation
    current_instantiation.cpp
)

add_executable(recursive_template
    recursive_template.cpp
)

add_executable(many_fold_wrapper
    many_fold_wrapper.cpp
)

add_executable(func_template_argument_deduction
    func_template_argument_deduction.cpp
)

add_executable(class_template_argument_deduction
    class_template_argument_deduction.cpp
)

add_executable(forwarding_reference
    forwarding_reference.cpp
)

add_executable(decltype_rules
    decltype_rules.cpp
)

add_executable(friend_with_template
    friend_with_template.cpp
)

add_executable(sfinae_1
    sfinae_1.cpp
)

add_executable(sfinae_2
    sfinae_2.cpp
)

add_executable(type_trait_1
    type_trait_1.cpp
)

add_executable(type_trait_2
    type_trait_2.cpp
)

add_executable(simple_require
    simple_require.cpp
)

add_executable(type_require
    type_require.cpp
)

add_executable(compound_require
    compound_require.cpp
)