add_executable(stream_iterator
    stream_iterator.cpp
)

add_executable(misc_fib_cache
    misc_fib_cache.cpp
)

add_executable(misc_generalized_memoization
    misc_generalized_memoization.cpp
)

add_executable(misc_recursive_memoization
    misc_recursive_memoization.cpp
)

add_executable(threeway_operator
    threeway_operator.cpp
)

add_executable(format_1
    format_1.cpp
)

add_executable(format_2
    format_2.cpp
)

add_executable(format_3
    format_3.cpp
)

add_executable(format_4
    format_4.cpp
)

add_executable(coroutine_counter
    coroutine_counter.cpp
)

add_executable(coroutine_parse_datastream_0
    coroutine_parse_datastream_0.cpp
)

add_executable(coroutine_parse_datastream_1
    coroutine_parse_datastream_1.cpp
)