add_executable(range_views_filter
    range_views_filter.cpp
)

add_executable(range_sort
    range_sort.cpp
)

add_executable(range_swap
    range_swap.cpp
)

add_executable(range_iter_swap
    range_iter_swap.cpp
)

add_executable(swap_ranges
    swap_ranges.cpp
)

add_executable(stable_sort
    stable_sort.cpp
)