add_executable(variant_creation
    variant_creation.cpp
)

add_executable(variant_changing_values
    variant_changing_values.cpp
)

add_executable(variant_object_lifetime
    variant_object_lifetime.cpp
)

add_executable(variant_exception
    variant_exception.cpp
)

add_executable(variant_sizeof
    variant_sizeof.cpp
)

add_executable(variant_error_handling
    variant_error_handling.cpp
)

add_executable(variant_parsing_command
    variant_parsing_command.cpp
)

add_executable(variant_fsm
    variant_fsm.cpp
)