add_executable(dinning_philosophers_unique_lock
    dinning_philosophers_unique_lock.cpp
)

add_executable(dinning_philosophers_scoped_lock
    dinning_philosophers_scoped_lock.cpp
)

add_executable(singleton_meyers
    singleton_meyers.cpp
)

add_executable(singleton_lock
    singleton_lock.cpp
)

add_executable(singleton_call_once
    singleton_call_once.cpp
)

add_executable(singleton_atomic_sqt
    singleton_atomic_sqt.cpp
)

add_executable(singleton_atomic_acquire_release
    singleton_atomic_acquire_release.cpp
)