add_executable(dinning_philosophers_unique_lock
    dinning_philosophers_unique_lock.cpp
)

add_executable(dinning_philosophers_scoped_lock
    dinning_philosophers_scoped_lock.cpp
)

add_executable(singleton_meyers
    singleton_meyers.cpp
)

add_executable(singleton_lock
    singleton_lock.cpp
)

add_executable(singleton_call_once
    singleton_call_once.cpp
)

add_executable(singleton_atomic_sqt
    singleton_atomic_sqt.cpp
)

add_executable(singleton_atomic_acquire_release
    singleton_atomic_acquire_release.cpp
)

add_executable(ping_pong_cond_var
    ping_pong_cond_var.cpp
)

add_executable(ping_pong_two_atomic_flags
    ping_pong_two_atomic_flags.cpp
)

add_executable(ping_pong_one_atomic_flag
    ping_pong_one_atomic_flag.cpp
)

add_executable(ping_pong_atomic_bool
    ping_pong_atomic_bool.cpp
)

add_executable(ping_pong_semaphore
    ping_pong_semaphore.cpp
)

add_executable(eager_future_comment
    eager_future_comment.cpp
)

add_executable(lazy_future
    lazy_future.cpp
)