add_executable(dinning_philosophers_unique_lock
    dinning_philosophers_unique_lock.cpp
)

add_executable(dinning_philosophers_scoped_lock
    dinning_philosophers_scoped_lock.cpp
)

add_executable(singleton_meyers
    singleton_meyers.cpp
)

add_executable(singleton_lock
    singleton_lock.cpp
)

add_executable(singleton_call_once
    singleton_call_once.cpp
)

add_executable(singleton_atomic_sqt
    singleton_atomic_sqt.cpp
)

add_executable(singleton_atomic_acquire_release
    singleton_atomic_acquire_release.cpp
)

add_executable(ping_pong_cond_var
    ping_pong_cond_var.cpp
)

add_executable(ping_pong_two_atomic_flags
    ping_pong_two_atomic_flags.cpp
)

add_executable(ping_pong_one_atomic_flag
    ping_pong_one_atomic_flag.cpp
)

add_executable(ping_pong_atomic_bool
    ping_pong_atomic_bool.cpp
)

add_executable(ping_pong_semaphore
    ping_pong_semaphore.cpp
)

add_executable(eager_future_comment
    eager_future_comment.cpp
)

add_executable(lazy_future
    lazy_future.cpp
)

add_executable(lazy_future_with_thread
    lazy_future_with_thread.cpp
)

add_executable(infinite_data_stream
    infinite_data_stream.cpp
)

add_executable(transparent_start_job
    transparent_start_job.cpp
)

add_executable(start_job_with_automatic_resumption
    start_job_with_automatic_resumption.cpp
)

add_executable(start_job_with_automatic_resumption_on_thread
    start_job_with_automatic_resumption_on_thread.cpp
)

add_executable(telephone_book_exclusive_lock
    telephone_book_exclusive_lock.cpp
)

add_executable(timepoint
    timepoint.cpp
)

add_executable(timepoint_addition
    timepoint_addition.cpp
)

add_executable(clock_properties
    clock_properties.cpp
)

add_executable(epoch
    epoch.cpp
)