add_executable(ccwcpp_interrupt_thread
    ccwcpp_interrupt_thread.cpp
)

add_executable(ccwcpp_read_writer_lock
    ccwcpp_read_writer_lock.cpp
)

add_executable(ccwcpp_dead_lock_resolved
    ccwcpp_dead_lock_resolved.cpp
)

add_executable(ccwcpp_dead_lock_resolved_scoped_lock
    ccwcpp_dead_lock_resolved_scoped_lock.cpp
)

add_executable(ccwcpp_thread_safe_initialization_constexpr
    ccwcpp_thread_safe_initialization_constexpr.cpp
)

add_executable(ccwcpp_thread_safe_initialization_call_once
    ccwcpp_thread_safe_initialization_call_once.cpp
)

add_executable(ccwcpp_thread_local
    ccwcpp_thread_local.cpp
)

add_executable(ccwcpp_invoke_callback
    ccwcpp_invoke_callback.cpp
)

add_executable(ccwcpp_signal_stop_requests
    ccwcpp_signal_stop_requests.cpp
)

add_executable(ccwcpp_condition_variable_any
    ccwcpp_condition_variable_any.cpp
)

add_executable(ccwcpp_thread_synchronization_semaphore
    ccwcpp_thread_synchronization_semaphore.cpp
)

add_executable(ccwcpp_latch
    ccwcpp_latch.cpp
)

add_executable(ccwcpp_barrier
    ccwcpp_barrier.cpp
)

add_executable(ccwcpp_lazy_task
    ccwcpp_lazy_task.cpp
)

add_executable(ccwcpp_fire_and_forget_future
    ccwcpp_fire_and_forget_future.cpp
)

add_executable(ccwcpp_concurrent_calculation
    ccwcpp_concurrent_calculation.cpp
)

add_executable(ccwcpp_packaged_task
    ccwcpp_packaged_task.cpp
)

add_executable(ccwcpp_packaged_task_reuse
    ccwcpp_packaged_task_reuse.cpp
)

add_executable(ccwcpp_promise_future
    ccwcpp_promise_future.cpp
)

add_executable(ccwcpp_shared_future
    ccwcpp_shared_future.cpp
)

add_executable(ccwcpp_promise_future_exception
    ccwcpp_promise_future_exception.cpp
)