add_executable(scoped_lock
    scoped_lock.cpp
)

add_executable(strategized_locking_runtime
    strategized_locking_runtime.cpp
)

add_executable(thread_safe_interface
    thread_safe_interface.cpp
)

add_executable(active_object
    active_object.cpp
)

add_executable(monitor_object
    monitor_object.cpp
)